# BackendAro

./: CMakeLists.txt  config
implement/: dataBase.cpp  delivery.cpp  helperFunctions.cpp  main.cpp  options.cpp  orders.cpp  salaries.cpp  time.cpp  workers.cpp
implement/carpets/: carpets.cpp  carpetsGetters.cpp  carpetsGettersForAdmin.cpp  carpetsSearchers.cpp  carpetsSetters.cpp
implement/evants/: complexOperationEvants.cpp  deliveryEvants.cpp  optionsEvants.cpp  ordersEvants.cpp  workerEvants.cpp
implement/evants/carpetsManipulation/: carpetsManipulation.cpp  carpetsManipulationGetters.cpp  carpetsManipulationGettersForAdmin.cpp  carpetsManipulationSetters.cpp
implement/evants/financeEvants/: financeGettersEvants.cpp
implement/workers/: workers.cpp  workersGetters.cpp
includes/: dataBase.hpp  delivery.hpp  helperFunctions.hpp  options.hpp  orders.hpp  salaries.hpp  time.hpp  workers.hpp
includes/carpets/: carpets.hpp  carpetsGetters.hpp  carpetsGettersForAdmin.hpp  carpetsSearchers.hpp  carpetsSetters.hpp
includes/evants/: complexOperationEvants.hpp  deliveryEvants.hpp  optionsEvants.hpp  ordersEvants.hpp  workerEvants.hpp
includes/evants/carpetsManipulation/: carpetsManipulation.hpp  carpetsManipulationGetters.hpp  carpetsManipulationGettersForAdmin.hpp  carpetsManipulationSetters.hpp
includes/evants/financeEvants/: financeGettersEvants.hpp
includes/workers/: workers.hpp  workersGetters.hpp
